--- a/addons/saving_account/views/menu.xml
+++ b/addons/saving_account/views/menu.xml
@@ -1,18 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
+  <record id="view_saving_account_form" model="ir.ui.view">
+    <field name="name">saving_account.form</field>
+    <field name="model">saving_account</field>
+    <field name="arch" type="xml">
+      <form>
+        <sheet>
+        <group>
+          <group>
+            <field name="name"/>
+            <field name="email"/>
+            <field name="phone"/>
+          </group>
+          <group>
+            <field name="open_date"/>
+            <field name="close_date"/>
+          </group>
+        </group>
+        </sheet>
+      </form>
+    </field>
+  </record>
+
+  <record id="action_saving_account" model="ir.actions.act_window">
+    <field name="name">Accounts</field>
+    <field name="type">ir.actions.act_window</field>
+    <field name="res_model">saving_account</field>
+    <field name="view_mode">tree,form,kanban</field>
+    <field name="context">{}</field>
+    <field name="help" type="html">
+      <p class="o_view_nocontent_smiling_face">
+        Create your first account!
+      </p>
+    </field>
+  </record>
+
+  <!-- <record id="view_principal_deposit_form" model="ir.ui.view">
+    <field name="name">principal.form</field>
+    <field name="model">principal</field>
+    <field name="arch" type="xml">
+      <tree>
+        <field name="entry_no" string="Entry No"/>
+        <field name="account_id" string="Account"/>
+        <field name="entry_type" string="Entry Type" default="Deposit"/>
+        <field name="ledger" string="Ledger" default="Principal"/>
+        <field name="entry_date" string="Entry Date"/>
+        <field name="ref_no" string="Ref. No"/>
+        <field name="base_amount" string="Amount"/>
+      </tree>
+    </field>
+  </record> -->
+
+  <record id="action_principal" model="ir.actions.act_window">
+    <field name="name">Principal</field>
+    <field name="type">ir.actions.act_window</field>
+    <field name="res_model">principal</field>
+    <field name="view_mode">tree,form,kanban</field>
+    <field name="context">{}</field>
+    <field name="help" type="html">
+      <p class="o_view_nocontent_smiling_face">
+        Create your first entry!
+      </p>
+    </field>
+  </record>
+
+  <!-- main menu -->
   <menuitem id="saving_account_root_menu"
             name="Saving Account"
             web_icon="saving_account,static/description/icon.png"
             sequence="0"/>
 
+  <!-- account menu -->
   <menuitem id="account_menu_master"
             name="Accounts"
+            action="action_saving_account"
             parent="saving_account_root_menu"
             sequence="0"/>
 
+  <!-- principal menu -->
   <menuitem id="principal_menu_master"
             name="Principal"
+            action="action_principal"
             parent="saving_account_root_menu"
             sequence="0"/>
 
@@ -24,6 +93,7 @@
               name="Withdraw"
               parent="principal_menu_master"/>
 
+  <!-- interest menu -->
   <menuitem id="interest_menu_master"
             name="Interest"
             parent="saving_account_root_menu"
