--- a/addons/saving_account/views/menu.xml
+++ b/addons/saving_account/views/menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<odoo>/
+<odoo>
 
   <record id="view_saving_account_form" model="ir.ui.view">
     <field name="name">saving_account.form</field>
