add interest view and update security

--- a/addons/saving_account/views/menu.xml
+++ b/addons/saving_account/views/menu.xml
@@ -24,6 +24,7 @@
   <!-- interest menu -->
   <menuitem id="principal_interest_menu_master"
             name="Interest"
+            action="action_principal_interest"
             parent="saving_account_root_menu"
             sequence="0"/>
 
