add account type and id

--- a/addons/saving_account/views/account_view.xml
+++ b/addons/saving_account/views/account_view.xml
@@ -9,6 +9,7 @@
         <sheet>
         <group>
           <group>
+            <field name="account_type"/>
             <field name="name"/>
             <field name="email"/>
             <field name="phone"/>
@@ -28,6 +29,8 @@
     <field name="model">saving_account</field>
     <field name="arch" type="xml">
       <tree>
+        <field name="account_id" string="Account ID"/>
+        <field name="account_type" string="Account Type"/>
         <field name="name" string="Name"/>
         <field name="email" string="Email"/>
         <field name="phone" string="Phone"/>
