--- a/addons/saving_account/views/account_view.xml
+++ b/addons/saving_account/views/account_view.xml
@@ -29,7 +29,7 @@
     <field name="model">saving_account</field>
     <field name="arch" type="xml">
       <tree>
-        <field name="account_id" string="Account ID"/>
+        <field name="account_no" string="Account ID"/>
         <field name="account_type" string="Account Type"/>
         <field name="name" string="Name"/>
         <field name="email" string="Email"/>
