--- a/addons/saving_account/views/interest_view.xml
+++ b/addons/saving_account/views/interest_view.xml
@@ -14,8 +14,8 @@
             <field name="entry_type" string="Entry Type"/>
             <field name="ledger" string="Ledger"/>
             <field name="ref_no" string="Ref. No"/>
-            <field name="base_amount" string="Base Amount"/>
-            <field name="add_amount" string="Add Amount"/>
+            <field name="principal_amount" string="Base Amount"/>
+            <field name="interest_amount" string="Add Amount"/>
           </group>
         </sheet>
       </form>
@@ -33,8 +33,8 @@
         <field name="ledger" string="Ledger"/>
         <field name="entry_date" string="Entry Date"/>
         <field name="ref_no" string="Ref. No"/>
-        <field name="base_amount" string="Base Amount"/>
-        <field name="add_amount" string="Add Amount"/>
+        <field name="principal_amount" string="Base Amount"/>
+        <field name="interest_amount" string="Add Amount"/>
       </tree>
     </field>
   </record>
