--- a/addons/saving_account/views/principal_view.xml
+++ b/addons/saving_account/views/principal_view.xml
@@ -26,10 +26,11 @@
     <field name="arch" type="xml">
       <tree>
         <field name="entry_no" string="Entry No"/>
-        <field name="account_id" string="Account"/>
+        <field name="entry_date" string="Entry Date"/>
         <field name="entry_type" string="Entry Type"/>
         <field name="ledger" string="Ledger"/>
-        <field name="entry_date" string="Entry Date"/>
+        <field name="account_id" string="Account"/>
+        <field name="description" string="Description"/>
         <field name="ref_no" string="Ref. No"/>
         <field name="principal_amount" string="Amount"/>
       </tree>
