--- a/addons/saving_account/views/principal_view.xml
+++ b/addons/saving_account/views/principal_view.xml
@@ -13,7 +13,7 @@
             <field name="entry_type" string="Entry Type"/>
             <field name="ledger" string="Ledger"/>
             <field name="ref_no" string="Ref. No"/>
-            <field name="principal_amount" string="Amount"/>
+            <field name="amount" string="Amount"/>
           </group>
         </sheet>
       </form>
@@ -32,7 +32,7 @@
         <field name="account_id" string="Account"/>
         <field name="description" string="Description"/>
         <field name="ref_no" string="Ref. No"/>
-        <field name="principal_amount" string="Amount"/>
+        <field name="amount" string="Amount"/>
       </tree>
     </field>
   </record>
