--- a/addons/saving_account/views/principal_view.xml
+++ b/addons/saving_account/views/principal_view.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-  <record id="view_principal_base_form" model="ir.ui.view">
-    <field name="name">principal.base.form</field>
-    <field name="model">principal.base</field>
+  <record id="view_entry_form" model="ir.ui.view">
+    <field name="name">saving_account.entry.form</field>
+    <field name="model">saving_account.entry</field>
     <field name="arch" type="xml">
       <form>
         <sheet>
@@ -20,9 +20,9 @@
     </field>
   </record>
 
-  <record id="view_principal_base_tree" model="ir.ui.view">
-    <field name="name">principal.base.tree</field>
-    <field name="model">principal.base</field>
+  <record id="view_entry_tree" model="ir.ui.view">
+    <field name="name">saving_account.entry.tree</field>
+    <field name="model">saving_account.entry</field>
     <field name="arch" type="xml">
       <tree>
         <field name="entry_no" string="Entry No"/>
@@ -37,10 +37,10 @@
     </field>
   </record>
 
-  <record id="action_principal_base" model="ir.actions.act_window">
-    <field name="name">Principal</field>
+  <record id="action_entry" model="ir.actions.act_window">
+    <field name="name">Entries</field>
     <field name="type">ir.actions.act_window</field>
-    <field name="res_model">principal.base</field>
+    <field name="res_model">saving_account.entry</field>
     <field name="view_mode">tree,form,kanban</field>
     <field name="context">{}</field>
     <field name="help" type="html">
