--- a/addons/saving_account/views/rate_view.xml
+++ b/addons/saving_account/views/rate_view.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
+   <record id="view_rate_form" model="ir.ui.view">
+    <field name="name">interest.rate.form</field>
+    <field name="model">interest.rate</field>
+    <field name="arch" type="xml">
+      <form>
+        <sheet>
+          <group>
+              <field name="start_date"/>
+              <field name="account_type"/>
+              <field name="annual_rate"/>
+          </group>
+        </sheet>
+      </form>
+    </field>
+  </record>
+
   <record id="action_rate" model="ir.actions.act_window">
     <field name="name">Interest Rates</field>
     <field name="type">ir.actions.act_window</field>
