--- a/addons/saving_account/views/schedule_view.xml
+++ b/addons/saving_account/views/schedule_view.xml
@@ -21,6 +21,18 @@
     </field>
   </record>
 
+  <record id="view_schedule_tree" model="ir.ui.view">
+    <field name="name">interest.schedule.tree</field>
+    <field name="model">interest.schedule</field>
+    <field name="arch" type="xml">
+      <tree>
+        <field name="interest_calculation_time" widget="float_time"/>
+        <field name="credit_interest_time" widget="float_time"/>
+        <field name="credit_interest_day"/>
+      </tree>
+    </field>
+  </record>
+
   <record id="action_schedule" model="ir.actions.act_window">
     <field name="name">Interest Schedule</field>
     <field name="type">ir.actions.act_window</field>
