--- a/addons/saving_account/views/menu.xml
+++ b/addons/saving_account/views/menu.xml
@@ -29,10 +29,10 @@
             sequence="0"/>
 
   <!-- interest schedule menu -->
-  <menuitem id="schedule_menu_master"
+  <!-- <menuitem id="schedule_menu_master"
             name="Schedule"
             action="action_schedule"
             parent="saving_account_root_menu"
-            sequence="0"/>
+            sequence="0"/> -->
 
 </odoo>
