term account report ready

--- a/addons/saving_account/report/term_account_report.xml
+++ b/addons/saving_account/report/term_account_report.xml
@@ -5,7 +5,7 @@
     <t t-call="web.html_container">
       <t t-call="web.external_layout">
         <div class="page">
-          <table style="table-layout:fixed">
+          <table style="table-layout:fixed; table-width:full">
             <tr>
               <td>Yue Hwa Chinese Products Saving System</td>
               <td><t t-esc="form['date_to']"/></td>
@@ -28,8 +28,8 @@
                 <td><t t-esc="line['account_no']"/></td>
                 <td><t t-esc="line['name']"/></td>
                 <td><t t-esc="line['total_principal']"/></td>
-                <td><t t-esc="line['total_principal']"/></td>
-                <td><t t-esc="line['total_principal']"/></td>
+                <td><t t-esc="line['total_interest']"/></td>
+                <td><t t-esc="line['interest_tax']"/></td>
                 <td><t t-esc="line['total_interest']"/></td>
               </tr>
             </t>
