--- a/addons/saving_account/report/term_account_template.xml
+++ b/addons/saving_account/report/term_account_template.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
 
-  <template id="term_account_details">
+  <template id="term_account_template">
     <t t-call="web.html_container">
       <t t-call="web.external_layout">
         <div class="page">
