--- a/addons/saving_account/views/menu.xml
+++ b/addons/saving_account/views/menu.xml
@@ -45,6 +45,12 @@
               name="Term Account"
               parent="report_menu_master"
               action="action_report_term_account"
-              sequence="0"/>
+              sequence="1"/>
+
+    <menuitem id="term_individual_account_report_menu"
+              name="Individual Account"
+              parent="report_menu_master"
+              action="action_report_term_individual_account"
+              sequence="2"/>
 
 </odoo>
