--- a/addons/saving_account/report/daily_financial_template.xml
+++ b/addons/saving_account/report/daily_financial_template.xml
@@ -20,58 +20,43 @@
             </tr>
             <tr>
               <td>Total Accounts</td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Active Accounts</td>
-              <td></td>
-              <td></td>
+              <td><t t-esc="report['account_transaction']"/></td>
+              <td><t t-esc="report['account_amount']"/></td>
             </tr>
             <tr>
               <td>Cash In</td>
-              <td></td>
-              <td></td>
+              <td><t t-esc="report['cash_in_transaction']"/></td>
+              <td><t t-esc="report['cash_in_amount']"/></td>
             </tr>
             <tr>
               <td>Cash Out</td>
-              <td></td>
-              <td></td>
+              <td><t t-esc="report['cash_out_transaction']"/></td>
+              <td><t t-esc="report['cash_out_amount']"/></td>
             </tr>
             <tr>
               <td>Cheque In</td>
-              <td></td>
-              <td></td>
+              <td>0</td>
+              <td>0</td>
             </tr>
             <tr>
               <td>Bad Cheque</td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Total Transactions</td>
-              <td></td>
-              <td></td>
+              <td>0</td>
+              <td>0</td>
             </tr>
             <tr>
               <td>Total Interest</td>
-              <td></td>
-              <td></td>
+              <td><t t-esc="report['total_interest_transaction']"/></td>
+              <td><t t-esc="report['total_interest_amount']"/></td>
             </tr>
             <tr>
               <td>Accrued Interest</td>
-              <td></td>
-              <td></td>
+              <td><t t-esc="report['accrued_interest_transaction']"/></td>
+              <td><t t-esc="report['accrued_interest_amount']"/></td>
             </tr>
             <tr>
-              <td>Void Transactions</td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Unposted Items</td>
-              <td></td>
-              <td></td>
+              <td>Interest Credit</td>
+              <td><t t-esc="report['interest_credit_transaction']"/></td>
+              <td><t t-esc="report['interest_credit_amount']"/></td>
             </tr>
           </table>
         </div>
