--- a/addons/saving_account/report/term_individual_account_template.xml
+++ b/addons/saving_account/report/term_individual_account_template.xml
@@ -45,7 +45,7 @@
                   <t t-else="">
                     <td></td>
                   </t>
-                <td><t t-esc="line['ledger']"/></td>
+                <td><t t-esc="line['balance']"/></td>
                 <td><t t-esc="line['ref_no']"/></td>
               </tr>
             </t>
