--- a/addons/saving_account/report/daily_financial_template.xml
+++ b/addons/saving_account/report/daily_financial_template.xml
@@ -8,7 +8,7 @@
           <table style="table-layout:fixed; table-width:full">
             <tr>
               <td>Yue Hwa Chinese Products Saving System</td>
-              <td><t t-esc="form['date']"/></td>
+              <td><t t-esc="form['date_from']"/></td>
             </tr>
           </table>
           <h5><center>Daily Financial Summary</center></h5>
@@ -16,36 +16,50 @@
             <tr>
               <th>Items</th>
               <th>Transactions</th>
+              <th>Amount of VIP</th>
+              <th>Amount of Normal</th>
               <th>Amount</th>
             </tr>
             <tr>
               <td>Total Accounts</td>
               <td><t t-esc="report['account_transaction']"/></td>
+              <td></td>
+              <td></td>
               <td><t t-esc="report['account_amount']"/></td>
             </tr>
             <tr>
               <td>Cash In</td>
               <td><t t-esc="report['cash_in_transaction']"/></td>
+              <td></td>
+              <td></td>
               <td><t t-esc="report['cash_in_amount']"/></td>
             </tr>
             <tr>
               <td>Cash Out</td>
               <td><t t-esc="report['cash_out_transaction']"/></td>
+              <td></td>
+              <td></td>
               <td><t t-esc="report['cash_out_amount']"/></td>
             </tr>
             <tr>
               <td>Total Interest</td>
               <td><t t-esc="report['total_interest_transaction']"/></td>
+              <td></td>
+              <td></td>
               <td><t t-esc="report['total_interest_amount']"/></td>
             </tr>
             <tr>
               <td>Accrued Interest</td>
               <td><t t-esc="report['accrued_interest_transaction']"/></td>
+              <td></td>
+              <td></td>
               <td><t t-esc="report['accrued_interest_amount']"/></td>
             </tr>
             <tr>
               <td>Interest Credit</td>
               <td><t t-esc="report['interest_credit_transaction']"/></td>
+              <td></td>
+              <td></td>
               <td><t t-esc="report['interest_credit_amount']"/></td>
             </tr>
           </table>
