--- a/addons/saving_account/report/daily_financial_template.xml
+++ b/addons/saving_account/report/daily_financial_template.xml
@@ -8,7 +8,7 @@
           <table style="table-layout:fixed; table-width:full">
             <tr>
               <td>Yue Hwa Chinese Products Saving System</td>
-              <td><t t-esc="form['date_from']"/></td>
+              <td><t t-esc="form['date_to']"/></td>
             </tr>
           </table>
           <h5><center>Daily Financial Summary</center></h5>
