--- a/addons/saving_account/report/term_individual_account_template.xml
+++ b/addons/saving_account/report/term_individual_account_template.xml
@@ -8,7 +8,7 @@
           <table style="table-layout:fixed; table-width:full">
             <tr>
               <td>Yue Hwa Chinese Products Saving System</td>
-              <td><t t-esc="form['date']"/></td>
+              <td><t t-esc="form['date_to']"/></td>
             </tr>
             <tr>
               <td><t t-esc="form['account_id'][0]"/></td>
