corrected total amount

--- a/addons/saving_account/report/term_individual_account_template.xml
+++ b/addons/saving_account/report/term_individual_account_template.xml
@@ -37,6 +37,9 @@
                   <t t-if="line.get('entry_type')=='deposit'">
                     <td><t t-esc="line['amount']"/></td>
                   </t>
+                   <t t-elif="line.get('entry_type')=='credit_interest'">
+                    <td><t t-esc="line['amount']"/></td>
+                  </t>
                   <t t-else="">
                     <td></td>
                   </t>
